<?xml version="1.0"?>
<package>
  <name>ari_2dnav_gazebo</name>
  <version>0.0.17</version>
  <description>ARI navigation launches and configs for simulation.</description>
  <maintainer email="procopio.stein@pal-robotics.com">Procopio Stein</maintainer>
  <maintainer email="sara.cooper@pal-robotics.com">Sara Cooper</maintainer>
  <license>Modified BSD</license>
  <author email="sara.cooper@pal-robotics.com">Sara Cooper</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ari_gazebo</run_depend>
  <run_depend>ari_2dnav</run_depend>
</package>
