<?xml version="1.0"?>
<package format="2">
  <name>ari_controller_configuration_gazebo</name>
  <version>0.0.17</version>
  <description>The ari_controller_configuration_gazebo package</description>
  <maintainer email="alessandro.difava@pal-robotics.com">Alessandro Di Fava</maintainer>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
<!--
  <exec_depend>rospy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ari_moveit_config</exec_depend>
-->
  <exec_depend>actionlib</exec_depend>
  <exec_depend>play_motion</exec_depend>
  <exec_depend>ari_controller_configuration</exec_depend>
  <exec_depend>ari_moveit_config</exec_depend>

</package>
