<?xml version="1.0"?>
<package format="2">
  <name>ari_gazebo</name>
  <version>0.0.17</version>
  <description>The ari_gazebo package</description>
  <maintainer email="alessandro.difava@pal-robotics.com">Alessandro Di Fava</maintainer>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>pal_gazebo_plugins</exec_depend>
  <exec_depend>pal_gazebo_worlds</exec_depend>
  <exec_depend>pal_hardware_gazebo</exec_depend>
  <exec_depend>ari_bringup</exec_depend>
  <exec_depend>ari_controller_configuration_gazebo</exec_depend>
  <exec_depend>ari_description</exec_depend>
  <exec_depend>ari_rgbd_sensors</exec_depend>
  <exec_depend>realsense_gazebo_plugin</exec_depend>

</package>
