<?xml version="1.0"?>
<package format="3">
  <name>ari_gazebo</name>
  <version>2.0.22</version>
  <description>The ari_gazebo package</description>

  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <license>Apache License 2.0</license>



  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>pal_gazebo_worlds</exec_depend>
  <exec_depend>pal_gazebo_plugins</exec_depend>
  <exec_depend>play_motion2_msgs</exec_depend>
  <exec_depend>ari_bringup</exec_depend>
  <exec_depend>ari_description</exec_depend>
  <exec_depend>ari_moveit_config</exec_depend>
<!-- TODO ROS2
  <exec_depend>ari_2dnav</exec_depend>
  <exec_depend>ari_rgbd_sensors</exec_depend>
  <exec_depend>realsense_gazebo_plugin</exec_depend>
-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
