<?xml version="1.0"?>
<package format="2">
  <name>ari_simulation</name>
  <version>0.0.17</version>
  <description>The ari_simulation package</description>
  <maintainer email="alessandro.difava@pal-robotics.com">Alessandro Di Fava</maintainer>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ari_2dnav_gazebo</exec_depend>
  <exec_depend>ari_controller_configuration_gazebo</exec_depend>
  <exec_depend>ari_gazebo</exec_depend>
  
  <export>
     <metapackage/>
  </export>
</package>
