<?xml version="1.0"?>
<package format="3">
  <name>ari_simulation</name>
  <version>2.0.22</version>
  <description>The ari_simulation package</description>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ari_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
