<?xml version="1.0"?>
<package format="2">
  <name>fake_odom</name>
  <version>0.0.0</version>
  <description>Node that publishes base_footprint to odom tf based on ground_truth_odom</description>
  <maintainer email="sara.cooper@pal-robotics.com">Sara Cooper</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
 
</package>
